tests/baselines/reference/optionalBindingParameters4.errors.txt
/a.js(4,14): error TS2463: A binding pattern parameter cannot be optional in an implementation signature.


==== /a.js (1 errors) ====
    /** 
    * @param {{ cause?: string }} [options] 
    */ 
    function foo({ cause } = {}) {
                 ~~~~~~~~~~~~~~
!!! error TS2463: A binding pattern parameter cannot be optional in an implementation signature.
        return cause;
    }
    